--- a/api_data_wrangling_mini_project (1).ipynb
+++ b/api_data_wrangling_mini_project (1).ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "# Store the API key as a string - according to PEP8, constants are always named in all upper case\n",
-    "API_KEY = 'sxjUsCxZ1S2tKHvHZHT1'"
+    "API_KEY = 'xxxxxxxxxxxx'"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "source": [
     "# Now, call the Quandl API and pull out a small sample of the data (only one day) to get a glimpse\n",
     "# into the JSON structure that will be returned\n",
-    "url='https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?api_key=sxjUsCxZ1S2tKHvHZHT1&start_date=2019-04-25'\n",
+    "url='https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?api_key=xxxxxxxxxxxx&start_date=2019-04-25'\n",
     "r=requests.get(url)\n",
     "response=r.text\n",
     "print(response)"
@@ -156,7 +156,7 @@
     }
    ],
    "source": [
-    "url='https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?api_key=sxjUsCxZ1S2tKHvHZHT1&start_date=2017-01-01&end_date=2017-12-31&order=asc'\n",
+    "url='https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?api_key=xxxxxxxxxxxxx&start_date=2017-01-01&end_date=2017-12-31&order=asc'\n",
     "r=requests.get(url)\n",
     "response=r.text\n",
     "print(response)"
@@ -203,7 +203,7 @@
     }
    ],
    "source": [
-    "url='https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?api_key=sxjUsCxZ1S2tKHvHZHT1&start_date=2017-01-01&end_date=2017-12-31&order=asc'\n",
+    "url='https://www.quandl.com/api/v3/datasets/FSE/AFX_X.json?api_key=xxxxxxxxxxxxx&start_date=2017-01-01&end_date=2017-12-31&order=asc'\n",
     "r=requests.get(url)\n",
     "json_data=r.json()\n",
     "print(json_data)"
